--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![R-CMD-check](https://github.com/ropenscilabs/icepalace/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/ropenscilabs/icepalace/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of this package is to download entire CRAN-like repositories, for instance R-universe repositories to use the archive as a frozen snapshot.
