docs: update README

--- a/README.Rmd
+++ b/README.Rmd
@@ -56,8 +56,14 @@ pkg_info[pkg_info$package == "styler",]
 ```
 
 By default the binaries are downloaded for the latest released version of R (`rversions::r_release()`).
-If `type` includes `win.binary` or `mac.binary` (by default, `type` includes source and both kinds of binaries), and there are no binary for the R version, the function will error.
+If `type` includes `win.binary` or `mac.binary` (by default, `type` includes source and both kinds of binaries), and there are no binary for the R version, the function will warn.
 
 ```{r error = TRUE}
 snapshot_package_repository("https://r-lib.r-universe.dev", type = "win.binary", r_version = "3.3")
+```
+
+If there are no package at all (for instance if there is a typo in the URL), the function will error.
+
+```{r error = TRUE}
+snapshot_package_repository("https://_blop_.r-universe.dev")
 ```
